--- a/Inventory Manager(ComputerScienceIA).csproj
+++ b/Inventory Manager(ComputerScienceIA).csproj
@@ -52,6 +52,7 @@
     <Compile Include="Cart.Designer.cs">
       <DependentUpon>Cart.cs</DependentUpon>
     </Compile>
+    <Compile Include="DataHolder.cs" />
     <Compile Include="Homepage.cs">
       <SubType>Form</SubType>
     </Compile>
